tests/specs/run/js_root_with_ts_check/js_root_with_ts_check.js.out
error: TS2322 [ERROR]: Type 'string' is not assignable to type 'number'.
const a = "";
      ^
    at [WILDCARD]
